--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@ p {
     height: 800px;
     width: 100%;
     margin-bottom: 25px;
-    background-image: url("digital-marketing-meeting.jpg");
+    background-image: url("digital-marketing-meeting.jpg" alt= "a small group meeting" );
     background-size: cover;
     background-position: center;
 }
