--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
     background-color: #d9dcd6;
 }
 
-.header {
+header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: #2a607c;
@@ -28,7 +28,7 @@ h1 {
     color: #d9dcd6;
 }
 
-.header div {
+header div {
     padding-top: 20px;
     margin-right: 20px;
     float: right;
@@ -36,11 +36,11 @@ h1 {
     font-size: 20px;
 }
 
-.header div ul {
+header div ul {
     list-style-type: none;
 }
 
-.header div ul li {
+header div ul li {
     display: inline-block;
     margin-left: 25px;
 }
@@ -50,17 +50,18 @@ a {
     text-decoration: none;
     background-color: #2a607c;
 }
-
+.digital {
+    width: 100%;
+    height: auto;
+}
 p {
     font-size: 16px;
 }
 
 .hero {
-    height: 800px;
-    width: 100%;
+    /* height: 20;
+    width: 10%; */
     margin-bottom: 25px;
-    background-image: url("digital-marketing-meeting.jpg" alt= "a small group meeting having a discussion " );
-    image: url("digital-marketing-meeting.jpg" alt= "a small group meeting having a discussion " );
     background-size: cover;
     background-position: center;
 }
@@ -75,7 +76,7 @@ p {
     margin-left: 25px;
 }
 
-.content {
+main {
     width: 75%;
     display: inline-block;
     margin-left: 20px;
