--- a/assets/style.css
+++ b/assets/style.css
@@ -59,8 +59,8 @@ p {
 }
 
 .hero {
-    /* height: 20;
-    width: 10%; */
+    height: 20;
+    width: 100%;
     margin-bottom: 25px;
     background-size: cover;
     background-position: center;
