--- a/assets/style.css
+++ b/assets/style.css
@@ -4,62 +4,61 @@
     margin: 0;
 }
 
+/* header styling */
 header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: #2a607c;
     color: #ffffff;
 }
- 
-nav{
-    background-color: #2a607c;
-}
-
-h1 {
-    display: inline-block;
-    font-size: 48px;
-}
-
-.seo {
-    color: #d9dcd6;
-}
-
 header div {
     padding-top: 20px;
     margin-right: 20px;
     float: right;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     font-size: 20px;
 }
-
-header div ul {
-    list-style-type: none;
-}
-
 header div ul li {
     display: inline-block;
     margin-left: 25px;
 }
 
-a {
-    color: white;
-    text-decoration: none;
-    background-color: #2a607c;
-}
-.digital {
-    width: 100%;
-    height: auto;
-}
-p {
-    font-size: 16px;
+/* change of color for the word "seo" in "horiseon" */
+.seo {
+    color: #d9dcd6;
 }
 
+
+/* nav bar background color  */
+nav{
+    background-color: #2a607c;
+}
+
+/* Digital marketing image container  */
 .hero {
     height: 20;
     width: 100%;
     margin-bottom: 25px;
     background-size: cover;
     background-position: center;
+}
+
+main {
+    width: 75%;
+    display: inline-block;
+    margin-left: 20px;
+}
+
+/* Links inside the Nav bar */
+a {
+    color: white;
+    text-decoration: none;
+    background-color: #2a607c;
+}
+
+.digital {
+    width: 100%;
+    height: auto;
 }
 
 .float-left {
@@ -70,12 +69,6 @@ p {
 .float-right {
     float: right;
     margin-left: 25px;
-}
-
-main {
-    width: 75%;
-    display: inline-block;
-    margin-left: 20px;
 }
 
 .benefits {
@@ -89,29 +82,9 @@ main {
     background-color: #2589bd;
 }
 
-.benefit-lead {
+.benefit-section {
     margin-bottom: 32px;
     color: #ffffff;
-}
-
-.benefit-brand {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit-cost {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit-lead h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-brand h3 {
-    margin-bottom: 10px;
-    text-align: center;
 }
 
 .benefit-cost h3 {
@@ -125,8 +98,7 @@ main {
     max-width: 150px;
     max-height: 200px;
 }
-
-
+/* Search engine Optimization container style >>  */
 .search-engine-optimization {
     margin-bottom: 20px;
     padding: 50px;
@@ -135,7 +107,7 @@ main {
     background-color: #0072bb;
     color: #ffffff;
 }
-
+/* online reputaition management container style >> */
 .online-reputation-management {
     margin-bottom: 20px;
     padding: 50px;
@@ -145,6 +117,7 @@ main {
     color: #ffffff;
 }
 
+/* social media marketing container style >>  */
 .social-media-marketing {
     margin-bottom: 20px;
     padding: 50px;
@@ -154,7 +127,13 @@ main {
     color: #ffffff;
 }
 
+/* Size and margin for >> Search engine Optimization, online reputaition management , social media marketing  */
+h2 {
+    margin-bottom: 20px;
+    font-size: 40px;
+}
 
+/* middle section images height  >> Search engine Optimization, online reputaition management , social media marketing   */
 .search-engine-optimization img {
     max-height: 200px;
 }
@@ -167,21 +146,7 @@ main {
     max-height: 200px;
 }
 
-.search-engine-optimization h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.online-reputation-management h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.social-media-marketing h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
+/* footer property >> */
 footer {
     padding: 30px;
     clear: both;
